# sm

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake  gengetopt.cmake
include/sm/: list.h  state_machine.h  state_machine_definition.h  state_machine_introspection.h  state_machine_validation.h
lib/: CMakeLists.txt  hashset.c  items.c  list.c
lib/src/: CMakeLists.txt  hashset.c  hashset.h  introspection.c  items.h  list.c  state_machine.c  state_machine_priv.h  validation.c  version.c.in
lib/tests/: CMakeLists.txt  list_test_suite.c  main.c  state_machine_test_suite.c  validation_test_suite.c
smi/: CMakeLists.txt  cmdline.ggo  enumerate.c  enumerate.h  main.c  parsing.c  parsing.h  sm.l  sm.y  smi.c  validate.c  validate.h
smi/examples/keep_running/: keep_running.sh  keep_running.sm
smi/man/: smi.1
smi/tests/: main.c  run.sh  syntax_error.sm  test.sh  toggle.sm  toggle_actions.sm  toggle_errors.sm  toggle_events.sm
